--- a/style.css
+++ b/style.css
@@ -68,3 +68,15 @@ footer{
   padding-top: 20px;
   color: #CCC;
 }
+
+#header-3 a:hover {
+}
+
+.Questions {
+  padding: 0 20px 0 20px;
+}
+
+.Questions h4 {
+  font-size: 30px;
+  margin 0 0 10px 0;
+}
