--- a/style.css
+++ b/style.css
@@ -73,16 +73,16 @@ footer{
   text-decoration: underline;
 }
 
-div.Questions {
+div.questions {
   padding: 0 20px 0 20px;
 }
 
-.Questions h4 {
+.questions h4 {
   font-size: 30px;
   margin 0 0 10px 0;
 }
 
-.Questions p {
+.questions p {
   font-size: 30px;
   margin 30px 0 0 0;
 }
