--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ div.questions p {
   margin-top: 30px;
 }
 
-.questions .btn {
+div.questions a.btn {
   border-radius: 5px;
   color: #FFF;
   background-color: #007bff;
