--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ div.questions a.btn {
   font-size: 20px;
   }
 
-.questions .btn:hover {
+div.questions a.btn:hover {
   background: #0069d9;
   border-color: #0069d9;
 }
